# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.893 2009/05/18 08:44:40 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.0 beta3 (2009/??/??)
 - (2009/05/18) Updated CPAN module Text::CSV to version 1.12.

2.4.0 beta2 (2009/05/15)
 - (2009/05/15) Fixed bug# 3618 - Ticket history info (ticket_history.queue_id)
    on TicketMove-Event is saving the old queue_id instead of the new queue_id.
 - (2009/05/15) Fixed bug# 3598 - Attachments are incorrectly displayed in
    ticket zoom view when attachments are located in file system (done by
    AttachmentFS) and now AttachmentDB backned is used.
 - (2009/05/15) Fixed bug# 3583 - Watched tickets do not follow queue rights.
    Can't read watched tickets with no permissions in new queue.
 - (2009/05/15) Fixed bug# 3816 - Typo in some bin/*.pl files like
    bin/PostMasterMailbox.pl.
 - (2009/05/15) Added escalation time selection in admin generic agent
    interface.
 - (2009/05/15) Added notification event feature (be able to create custom
    notifications based on ticket events). Old notifications get migrated
    by scripts/DBUpdate-to-2.4.pl. Removed queue attributes for customer
    notification options.
 - (2009/04/27) Fixed bug# 3805 - Error: Module
    Kernel/Output/HTML/NavBarTicketBulkAction.pm not found!'
 - (2009/04/27) Fixed bug# 3802 - Errormessage: "Got no EncodeObject!" if
    using rpc.pl (SOAP).
 - (2009/04/24) Fixed bug# 3691 - CustomerUser::LDAP does support GroupDN now.
 - (2009/04/23) Fixed bug# 3799 - The UPGRADING refrences a file not included
    in the source code.
 - (2009/04/20) Updated nb_NO translation - thanks to Fredrik Andersen!
 - (2009/04/20) Fixed bug# 3786 - No CSS get found at installation time (no
    colors are visable).
