@@ -2,7 +2,7 @@
 # Kernel/Modules/AgentTicketPhone.pm - to handle phone calls
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketPhone.pm,v 1.94 2009/04/23 13:47:27 mh Exp $
+# $Id: AgentTicketPhone.pm,v 1.95 2009/05/19 08:12:16 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -23,7 +23,7 @@ use Kernel::System::LinkObject;
 use Mail::Address;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.94 $) [1];
+$VERSION = qw($Revision: 1.95 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -441,6 +441,17 @@ sub Run {
         }
 
         # html output
+        my $Services = $Self->_GetServices(
+            %GetParam,
+            CustomerUserID => $CustomerData{CustomerUserLogin} || '',
+            QueueID => $Self->{QueueID} || 1,
+        );
+        my $SLAs = $Self->_GetSLAs(
+            %GetParam,
+            CustomerUserID => $CustomerData{CustomerUserLogin} || '',
+            QueueID        => $Self->{QueueID} || 1,
+            Services       => $Services,
+        );
         $Output .= $Self->_MaskPhoneNew(
             QueueID    => $Self->{QueueID},
             NextStates => $Self->_GetNextStates(
@@ -458,16 +469,8 @@ sub Run {
                 CustomerUserID => $CustomerData{CustomerUserLogin} || '',
                 QueueID => $Self->{QueueID} || 1,
             ),
-            Services => $Self->_GetServices(
-                %GetParam,
-                CustomerUserID => $CustomerData{CustomerUserLogin} || '',
-                QueueID => $Self->{QueueID} || 1,
-            ),
-            SLAs => $Self->_GetSLAs(
-                %GetParam,
-                CustomerUserID => $CustomerData{CustomerUserLogin} || '',
-                QueueID => $Self->{QueueID} || 1,
-            ),
+            Services         => $Services,
+            SLAs             => $SLAs,
             Users            => $Self->_GetUsers( QueueID => $Self->{QueueID} ),
             ResponsibleUsers => $Self->_GetUsers( QueueID => $Self->{QueueID} ),
             To               => $Self->_GetTos(
@@ -779,6 +782,13 @@ sub Run {
                 $GetParam{ServiceID} = '';
             }
 
+            my $SLAs = $Self->_GetSLAs(
+                %GetParam,
+                CustomerUserID => $CustomerUser || $SelectedCustomerUser || '',
+                QueueID        => $NewQueueID || 1,
+                Services       => $Services,
+            );
+
             # header
             my $Output = $Self->{LayoutObject}->Header();
             $Output .= $Self->{LayoutObject}->NavigationBar();
@@ -807,13 +817,9 @@ sub Run {
                     CustomerUserID => $CustomerUser || $SelectedCustomerUser || '',
                     QueueID => $NewQueueID || 1,
                 ),
-                Services => $Services,
-                SLAs     => $Self->_GetSLAs(
-                    %GetParam,
-                    CustomerUserID => $CustomerUser || $SelectedCustomerUser || '',
-                    QueueID => $NewQueueID || 1,
-                ),
-                CustomerID => $Self->{LayoutObject}->Ascii2Html( Text => $CustomerID ),
+                Services     => $Services,
+                SLAs         => $SLAs,
+                CustomerID   => $Self->{LayoutObject}->Ascii2Html( Text => $CustomerID ),
                 CustomerUser => $CustomerUser,
                 CustomerData => \%CustomerData,
                 FromOptions  => $Param{FromOptions},
@@ -1141,6 +1147,7 @@ sub Run {
             %GetParam,
             CustomerUserID => $CustomerUser || '',
             QueueID        => $QueueID      || 1,
+            Services       => $Services,
         );
 
         # get free text config options
@@ -1373,7 +1380,7 @@ sub _GetSLAs {
     my %SLA = ();
 
     # get sla
-    if ( $Param{ServiceID} ) {
+    if ( $Param{ServiceID} && $Param{Services} && %{ $Param{Services} } ) {
         %SLA = $Self->{TicketObject}->TicketSLAList(
             %Param,
             Action => $Self->{Action},
