@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.893 2009/05/18 08:44:40 mh Exp $
+# $Id: CHANGES,v 1.894 2009/05/19 08:12:16 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -226,6 +226,8 @@
     auth support.
 
 2.3.5 (2009/??/??)
+ - (2009/05/19) Fixed bug# 3844 - SLA get's not removed on reload if servics was
+    selected before (in agent interface).
  - (2009/04/23) Fixed bug# 3495 - Missing ldap disconnects leaves CLOSE_WAIT tcp
     sessions.
  - (2009/04/23) Fixed bug# 3674 - CustomerSearch() doesn't match non-single
